# package-info-validator

./: app.py  package_info_2024_template.yaml  pyproject.toml  run.py  run.spec  validate.py
templates/: index.html
